Change Namespace ALFC connect

--- a/ALFC connect PCL/Views/SermonSlidePage.xaml
+++ b/ALFC connect PCL/Views/SermonSlidePage.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <CarouselPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:helper="clr-namespace:ALFCConnect.Helpers;assembly=ALFCConnect"
-             x:Class="ALFCConnect.SermonSlidePage"
+             xmlns:helper="clr-namespace:ALFCconnect.Helpers;assembly=ALFCconnect"
+             x:Class="ALFCconnect.SermonSlidePage"
              ItemsSource="{Binding Slides}"
              Title="{Binding SermonName}"
              BackgroundColor="White"
