--- a/ALFC connect PCL/Views/MainPage.xaml
+++ b/ALFC connect PCL/Views/MainPage.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms" 
 				  xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-				  xmlns:local="clr-namespace:ALFCConnect;assembly=ALFCConnect"
-				  x:Class="ALFCConnect.MainPage">
+				  xmlns:local="clr-namespace:ALFCconnect;assembly=ALFCconnect"
+				  x:Class="ALFCconnect.MainPage">
   <MasterDetailPage.Master>
   	<local:MasterPage x:Name="masterPage" />
   </MasterDetailPage.Master>
