--- a/ALFC connect PCL/Views/SermonsPage.xaml
+++ b/ALFC connect PCL/Views/SermonsPage.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
 			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-			 x:Class="ALFCConnect.SermonsPage"
-       xmlns:customVM="clr-namespace:ALFCConnect.ViewModels;assembly=ALFCConnect"
+			 x:Class="ALFCconnect.SermonsPage"
+       xmlns:customVM="clr-namespace:ALFCconnect.ViewModels;assembly=ALFCconnect"
        BackgroundColor="White"
 			 Title="Sermons">
   <ContentPage.BindingContext>
