--- a/ALFC connect PCL/Views/SermonSlidePage.xaml
+++ b/ALFC connect PCL/Views/SermonSlidePage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <CarouselPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:helper="clr-namespace:ALFCconnect.Helpers;assembly=ALFCconnect"
+             xmlns:helper="clr-namespace:ALFCconnect.Helpers;assembly=ALFCConnectPCL"
              x:Class="ALFCconnect.SermonSlidePage"
              ItemsSource="{Binding Slides}"
              Title="{Binding SermonName}"
@@ -27,16 +27,18 @@
             <StackLayout  Grid.Row="0" Grid.Column="1">
               <Label  Text="{Binding Title}" HeightRequest="30" FontSize="12" TextColor="#303030"  HorizontalOptions="Center" />
             </StackLayout>
-            <StackLayout  Grid.Row="1" Grid.ColumnSpan="3" >
+            <StackLayout Padding="0,0,0,5" Grid.Row="1" Grid.ColumnSpan="3" >
               <helper:PinchToZoomContainer>
                 <helper:PinchToZoomContainer.Content>
-                  <Image Source="{Binding ImageUrl}" HorizontalOptions="StartAndExpand"  MinimumHeightRequest="300" MinimumWidthRequest="450" IsVisible="{Binding ImageIsVisible}"  />
+                  <Image Source="{Binding ImageUrl}" HorizontalOptions="CenterAndExpand"  MinimumHeightRequest="300" MinimumWidthRequest="450" IsVisible="{Binding ImageIsVisible}"  />
                 </helper:PinchToZoomContainer.Content>
               </helper:PinchToZoomContainer>
             </StackLayout>
-            <Label  Grid.Row="2" Grid.ColumnSpan="3" Text="{Binding Message}" TextColor="#303030" HorizontalOptions="Center" />
-            <StackLayout Grid.Row="3" Grid.ColumnSpan="3">
-              <Entry x:Name="slideNote" Text="{Binding Note, Mode=TwoWay}" Placeholder="enter note" PlaceholderColor="#909090" MinimumHeightRequest="200" MinimumWidthRequest="300" BackgroundColor="Silver" />
+            <StackLayout Padding="0,5,0,5" Grid.Row="2" Grid.ColumnSpan="3">
+            <Label Text="{Binding Message}" TextColor="#303030" HorizontalOptions="Center" />
+            </StackLayout>
+              <StackLayout Grid.Row="3" Grid.ColumnSpan="3">
+                <Editor x:Name="slideNote" Text="{Binding Note, Mode=TwoWay}" MinimumHeightRequest="200" MinimumWidthRequest="300"  BackgroundColor="Silver" />
             </StackLayout>
             <Button Grid.Row="4" Grid.Column="0" Image="shareIcon.png" HeightRequest="30" Clicked="OnShareButtonClicked" BackgroundColor="White" CommandParameter="{Binding Id}" />
             <Button Grid.Row="4" Grid.Column="2" Image="returnIcon.png" HeightRequest="30" Clicked="OnSaveButtonClicked" BackgroundColor="White" />
