--- a/ALFC connect PCL/Views/SharePage.xaml
+++ b/ALFC connect PCL/Views/SharePage.xaml
@@ -12,37 +12,39 @@
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="0.5*" />
         <ColumnDefinition Width="0.5*" />
-      </Grid.ColumnDefinitions>
-
-      
+      </Grid.ColumnDefinitions> 
     </Grid>
   </StackLayout>
  <StackLayout Padding="5,10,5,0" BackgroundColor="White" MinimumHeightRequest="300" >
-    <Grid  >
+    <Grid>
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="0.25*" />
         <ColumnDefinition Width="0.25*" />
         <ColumnDefinition Width="0.25*"/>
         <ColumnDefinition Width="0.25*" />
       </Grid.ColumnDefinitions>
-      <Label Grid.ColumnSpan="4" Grid.Row="0" Text="Share your sermon notes" FontSize="Large" TextColor="#303030" VerticalOptions="Center" HorizontalOptions="Center" />
-      <Label Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="1" Text="Slide Title" TextColor="#303030" HorizontalOptions="EndAndExpand"></Label>
-      <Switch Grid.Column="2" Grid.Row="1" x:Name="shareTitleSwitch" HorizontalOptions="StartAndExpand" Toggled="MakeMessage" />
-      
-      <Label Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="2" Text="Slide Message" TextColor="#303030" HorizontalOptions="EndAndExpand"></Label>
-      <Switch Grid.Column="2" Grid.Row="2" x:Name="shareMessageSwitch"  HorizontalOptions="StartAndExpand" Toggled="MakeMessage"/>
-      
-      <Label Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="3" Text="Slide Note" TextColor="#303030" HorizontalOptions="EndAndExpand"></Label>
-      <Switch Grid.Column="2" Grid.Row="3" x:Name="shareMyNoteSwitch" HorizontalOptions="StartAndExpand" IsToggled="True"  Toggled="MakeMessage"/>
 
-      <Label Grid.Column="0" Grid.Row="4" Text="Title" TextColor="#303030" HorizontalOptions="EndAndExpand"></Label>
-      <Entry x:Name="MessageTitle" Grid.ColumnSpan="3" Grid.Column="1" Grid.Row="4" Text="" TextColor="#333333" BackgroundColor="Silver" ></Entry>
+      <Label Grid.ColumnSpan="4" Grid.Row="0" Text="Share your sermon notes" FontSize="Large" TextColor="#000000" VerticalOptions="Center" HorizontalOptions="Center" />
+      <Label  Grid.Column="1" Grid.Row="1" Text="Title" TextColor="#2973BA" VerticalOptions="Center" ></Label>
+      <Switch Grid.Column="2" Grid.Row="1" x:Name="shareTitleSwitch" VerticalOptions="Center" Toggled="MakeMessage" />
       
-      <Label Grid.Column="0" Grid.Row="5" Text="Body" TextColor="#303030" HorizontalOptions="EndAndExpand"></Label>
-      <Entry x:Name="MessageText" Grid.ColumnSpan="3" Grid.Column="1" Grid.Row="5" Text="" TextColor="#333333" BackgroundColor="Silver" ></Entry>
+      <Label  Grid.Column="1" Grid.Row="2" Text="Image" TextColor="#2973BA" VerticalOptions="Center"  ></Label>
+      <Switch Grid.Column="2" Grid.Row="2" x:Name="shareImageSwitch"  Toggled="MakeMessage" VerticalOptions="Center" />
+      <Label  Grid.Column="1" Grid.Row="3" Text="Message" TextColor="#2973BA" VerticalOptions="Center"  ></Label>
+      <Switch Grid.Column="2" Grid.Row="3" x:Name="shareMessageSwitch" Toggled="MakeMessage" VerticalOptions="Center" />
+
+      <Label  Grid.Column="1" Grid.Row="4" Text="My Note" TextColor="#2973BA" VerticalOptions="Center"  ></Label>
+      <Switch Grid.Column="2" Grid.Row="4" x:Name="shareMyNoteSwitch"  IsToggled="True"  Toggled="MakeMessage" VerticalOptions="Center" />
+
+      <Label Grid.Column="0" Grid.Row="5" Text="Title" TextColor="#2973BA" HorizontalOptions="EndAndExpand"></Label>
+      <Entry x:Name="MessageTitle" Grid.ColumnSpan="3" Grid.Column="1" Grid.Row="5" TextColor="#333333" BackgroundColor="Silver"></Entry>
       
-      <Button Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="6"   BorderColor="Black" BackgroundColor="Silver"  Image="shareButton.png" HeightRequest="80" WidthRequest="200" Clicked="OnShareButtonClicked"/>
-              <Button  Grid.Column="3" Grid.Row="6" Image="returnIcon.png" HeightRequest="30" Clicked="OnReturnButtonClicked" BackgroundColor="White" />
+      
+      <Label Grid.Column="0" Grid.Row="6" Text="Body" TextColor="#2973BA" HorizontalOptions="EndAndExpand"></Label>
+      <Editor x:Name="MessageText" Grid.ColumnSpan="3" Grid.Column="1" Grid.Row="6" Grid.RowSpan="2"  Text="" MinimumHeightRequest="100" TextColor="#333333" BackgroundColor="Silver" ></Editor>
+      
+      <Button Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="8"   BorderColor="Black" BackgroundColor="White"  Image="shareButton.png" HeightRequest="80" WidthRequest="200" Clicked="OnShareButtonClicked"/>
+              <Button  Grid.Column="3" Grid.Row="8" Image="returnIcon.png" HeightRequest="30" Clicked="OnReturnButtonClicked" BackgroundColor="White" />
     
     </Grid>
         
