--- a/ALFC connect PCL/Views/SermonSlidePage.xaml
+++ b/ALFC connect PCL/Views/SermonSlidePage.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <CarouselPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:helper="clr-namespace:ALFCconnect.Helpers;assembly=ALFCConnectPCL"
-             x:Class="ALFCconnect.SermonSlidePage"
-             ItemsSource="{Binding Slides}"
+             xmlns:helper="clr-namespace:ALConnect.Helpers;assembly=ALConnectPCL"
+             x:Class="ALConnect.SermonSlidePage"
+              ItemsSource="{Binding Slides}"
              Title="{Binding SermonName}"
              BackgroundColor="White"
   >
