--- a/ALFC connect PCL/Views/SettingsPage.xaml
+++ b/ALFC connect PCL/Views/SettingsPage.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:custom="clr-namespace:ALFCconnect.Common;assembly=ALFCConnectPCL"
-             x:Class="ALFCconnect.Views.SettingsPage"
+             xmlns:custom="clr-namespace:ALConnect.Common;assembly=ALConnectPCL"
+             x:Class="ALConnect.Views.SettingsPage"
               BackgroundColor="White">
   <ScrollView>
     <Label Text="{Binding PageTitle}" VerticalOptions="Center" HorizontalOptions="Center" />
