--- a/ALFC connect PCL/Views/SharePage.xaml
+++ b/ALFC connect PCL/Views/SharePage.xaml
@@ -23,6 +23,21 @@
         <ColumnDefinition Width="0.25*"/>
         <ColumnDefinition Width="0.25*" />
       </Grid.ColumnDefinitions>
+      <Grid.RowDefinitions>
+        <RowDefinition Height="80"/>
+        <RowDefinition Height="40"/>
+        <RowDefinition Height="40"/>
+        <RowDefinition Height="40"/>
+        <RowDefinition Height="40"/>
+        <RowDefinition Height="2"/>
+        <RowDefinition Height="40"/>
+        <RowDefinition Height="2"/>
+        <RowDefinition Height="40"/>
+        <RowDefinition Height="40"/>
+        <RowDefinition Height="200*"/>
+        
+        <RowDefinition Height="60"/>
+      </Grid.RowDefinitions>
 
       <Label Grid.ColumnSpan="4" Grid.Row="0" Text="Share your sermon notes" FontSize="Large" TextColor="#000000" VerticalOptions="Center" HorizontalOptions="Center" />
       <Label  Grid.Column="1" Grid.Row="1" Text="Title" TextColor="#2973BA" VerticalOptions="Center" ></Label>
@@ -35,16 +50,19 @@
 
       <Label  Grid.Column="1" Grid.Row="4" Text="My Note" TextColor="#2973BA" VerticalOptions="Center"  ></Label>
       <Switch Grid.Column="2" Grid.Row="4" x:Name="shareMyNoteSwitch"  IsToggled="True"  Toggled="MakeMessage" VerticalOptions="Center" />
-
-      <Label Grid.Column="0" Grid.Row="5" Text="Title" TextColor="#2973BA" HorizontalOptions="EndAndExpand"></Label>
-      <Entry x:Name="MessageTitle" Grid.ColumnSpan="3" Grid.Column="1" Grid.Row="5" TextColor="#333333" BackgroundColor="Silver"></Entry>
+      <BoxView Grid.ColumnSpan="4" Grid.Row="5" Color="#4B68A2" HeightRequest="2" HorizontalOptions="FillAndExpand"></BoxView>
+      <Label  Grid.Column="1" Grid.Row="6" Text="Share all notes" TextColor="#2973BA" VerticalOptions="Center"  ></Label>
+      <Switch Grid.Column="2" Grid.Row="6" x:Name="shareAllNoteSwitch"  IsToggled="False"  Toggled="MakeMessage" VerticalOptions="Center" />
+      <BoxView Grid.ColumnSpan="4" Grid.Row="7" Grid.Column="0" Color="#4B68A2" HeightRequest="2" HorizontalOptions="FillAndExpand"></BoxView>
       
+      <Label Grid.Column="0" Grid.Row="8" Text="Title" TextColor="#2973BA" HorizontalOptions="EndAndExpand"></Label>
+      <Entry x:Name="MessageTitle" Grid.ColumnSpan="3" Grid.Column="1" Grid.Row="8" TextColor="#333333" BackgroundColor="Silver"></Entry>
       
-      <Label Grid.Column="0" Grid.Row="6" Text="Body" TextColor="#2973BA" HorizontalOptions="EndAndExpand"></Label>
-      <Editor x:Name="MessageText" Grid.ColumnSpan="3" Grid.Column="1" Grid.Row="6" Grid.RowSpan="2"  Text="" MinimumHeightRequest="100" TextColor="#333333" BackgroundColor="Silver" ></Editor>
+      <Label Grid.Column="0" Grid.Row="9" Text="Body" TextColor="#2973BA" HorizontalOptions="EndAndExpand"></Label>
+      <Editor x:Name="MessageText" Grid.ColumnSpan="3" Grid.Column="1" Grid.Row="10" Grid.RowSpan="2"  Text="" MinimumHeightRequest="100" TextColor="#333333" BackgroundColor="Silver" ></Editor>
       
-      <Button Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="8"   BorderColor="Black" BackgroundColor="White"  Image="shareButton.png" HeightRequest="80" WidthRequest="200" Clicked="OnShareButtonClicked"/>
-              <Button  Grid.Column="3" Grid.Row="8" Image="returnIcon.png" HeightRequest="30" Clicked="OnReturnButtonClicked" BackgroundColor="White" />
+      <Button Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="11"   BorderColor="Black" BackgroundColor="White"  Image="shareButton.png" HeightRequest="80" WidthRequest="200" Clicked="OnShareButtonClicked"/>
+      <Button  Grid.Column="3" Grid.Row="11" Image="returnIcon.png" HeightRequest="30" Clicked="OnReturnButtonClicked" BackgroundColor="White" />
     
     </Grid>
         
