--- a/ALFC connect PCL/Views/MainPage.xaml
+++ b/ALFC connect PCL/Views/MainPage.xaml
@@ -2,7 +2,8 @@
 <MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms" 
 				  xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
 				  xmlns:local="clr-namespace:ALConnect;assembly=ALConnectPCL"
-				  x:Class="ALConnect.MainPage">
+				  x:Class="ALConnect.MainPage"
+          BackgroundColor="White">
   <MasterDetailPage.Master>
   	<local:MasterPage x:Name="masterPage" />
   </MasterDetailPage.Master>
